--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
 	"name": "react-frame-demo",
 	"version": "0.1.0",
-	
 	"private": true,
 	"dependencies": {
 		"@reduxjs/toolkit": "^1.9.2",
@@ -9,6 +8,7 @@
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
 		"antd": "^5.1.7",
+		"antd-mobile": "^5.36.1",
 		"axios": "^1.3.0",
 		"craco-less": "2.1.0-alpha.0",
 		"normalize.css": "^8.0.1",
