--- a/package.json
+++ b/package.json
@@ -47,9 +47,13 @@
 	},
 	"devDependencies": {
 		"@craco/craco": "^7.0.0-alpha.9",
+		"@eslint/js": "^9.8.0",
 		"babel-plugin-import": "^1.13.6",
+		"eslint": "9.x",
 		"eslint-config-prettier": "^9.0.0",
 		"eslint-plugin-prettier": "^5.0.1",
+		"eslint-plugin-react": "^7.35.0",
+		"globals": "^15.9.0",
 		"less": "^4.2.0",
 		"less-loader": "^11.1.3"
 	}
